<resources>
    <string name="app_name">TaskManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--signin-->
    <string name="signin_title">Welcome!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_button">Sign In</string>
    <string name="message1">Do not have an account?</string>
    <string name="message_link1">Sign Up!</string>
    <string name="message2">Forgot password</string>
    <string name="message_link2">Click here!</string>

    <!--signup-->
    <string name="signup_title">Sign Up</string>
    <string name="email_hint_signup">Email</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint_signup">Password</string>
    <string name="check">Enter Password Again</string>
    <string name="signup_button">Sign Up</string>
    <string name="message">Already have an account?</string>
    <string name="message_link">Sign In!</string>

    <!--bottomnav-->
    <string name="tasks">Tasks</string>
    <string name="task_log">Task Log</string>
    <string name="inventory">Inventory</string>
    <string name="archive">Archive</string>
    <string name="inventory_log">Inventory Log</string>

    <!--settings-->
    <string name="toolbar_settings">Settings</string>
    <string name="account">Account</string>
    <string name="users">User Management</string>
    <string name="language">Language</string>
    <string name="signout">Sign Out</string>

    <!--language-->
    <string name="toolbar_lang">Language</string>
    <string name="azeri">Azerbaijan</string>
    <string name="eng">English</string>

    <!--account-->
    <string name="account_toolbar">Account</string>
    <string name="userid">User ID</string>
    <string name="username_account">User Name</string>
    <string name="email_accout">Email</string>
    <string name="role_account">Role</string>
    <string name="update_button_account">Update Name</string>

    <!--task adapter-->
    <string name="task_name">Task Name</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="user_name">User Name</string>

    <!--inventory adapter-->
    <string name="model">Model</string>
    <string name="category">Category</string>
    <string name="count">Count</string>
    <string name="arrival">Arrival Date</string>
    <string name="archived">Archived Date</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="status_inventory">Status</string>

    <!--log adapter-->
    <string name="status_changed">✅ Status changed</string>
    <string name="location_changed">📍 Location changed</string>
    <string name="count_changed">Count changed</string>
    <string name="name_changed">Item name changed</string>
    <string name="category_changed">Category changed</string>
    <string name="sender_changed">Sender changed</string>
    <string name="who_changed">by</string>

    <!--inventory log-->
    <string name="log_toolbar">Inventory Log</string>

    <!--inventory details-->
    <string name="equipment_model">Model</string>
    <string name="equipment_category">Category</string>
    <string name="equipment_count">Count</string>
    <string name="equipment_status">Status</string>
    <string name="equipment_location">Location</string>
    <string name="equipment_arrival">Arrival Date</string>

    <!--filter items-->
    <string name="all">All Items</string>
    <string name="myitems">My Items</string>
    <string name="byuser">By User</string>
    <string name="byarrival">By Arrival Date</string>

    <!--filter tasks-->
    <string name="alltasks">All Tasks</string>
    <string name="mytasks">My Tasks</string>
    <string name="byuser_tasks">By User</string>
    <string name="bydeadline">By Deadline</string>

    <!--add task-->
    <string name="addtask_toolbar">Add new task</string>
    <string name="enter_taskname">Enter Task Name</string>
    <string name="enter_priority">Enter Task Priority</string>
    <string name="enter_deadline">Choose Deadline</string>
    <string name="enter_email">Choose Email</string>
    <string name="enter_username">User Name</string>
    <string name="addtask_button">Add</string>

    <!--add item-->
    <string name="additem_toolbar">Add new item</string>
    <string name="enter_itemname">Enter Equipment Name</string>
    <string name="enter_category">Category/Type</string>
    <string name="enter_sender">Sender</string>
    <string name="enter_location">Location</string>
    <string name="enter_count">Count</string>
    <string name="enter_itemstatus">Status</string>
    <string name="additem_button">Add</string>

    <!--edit item-->
    <string name="edititem_toolbar">Edit item</string>
    <string name="edititem_button">Edit</string>

    <!--edit task-->
    <string name="edittask_toolbar">Edit task</string>
    <string name="edittask_button">Edit</string>

    <!--user management-->
    <string name="usermanagement_toolbar">User Management</string>

    <!--user details-->
    <string name="details_username">User Name: </string>
    <string name="details_userid">User ID: </string>
    <string name="details_email">User Email: </string>
    <string name="details_role">User Role: </string>
    <string name="details_changerole">Change Role: </string>

    <!--alert title-->
    <string name="alert_title">Are you sure you want to delete this?</string>
    <string name="alert_title_warning">Warning!</string>
    <string name="alert_message_warning_status">Do you want to mark this task as "Done"? This action cannot be undone.</string>
    <string name="alert_message_warning">You are increasing the item count while changing its status or location. It is recommended to add these as a new item instead.</string>
    <string name="edititem_positive_button">Add as new item</string>
    <string name="invalid_action">Invalid Action</string>
    <string name="invalid_action_message">Cannot create a new item with zero or negative count. Please review the count.</string>
    <string name="alert_message">Deleted item cannot be recovered</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>

    <!--filter by user-->
    <string name="alert_title_filter">Filter by User</string>
    <string name="positive_button_filter">Ok</string>
    <string name="negative_button_filter">Cancel</string>

    <!--Toast messages-->
    <string name="empty_input">Fill all inputs</string>
    <string name="empty_input_signin">Enter email and password</string>
    <string name="reset_link">Reset link has been sent to your email</string>
    <string name="error">Error</string>
    <string name="error_notfound">User not found</string>
    <string name="check_password">For security, you must enter the password twice. Passwords do not match.</string>
    <string name="account_create">Account has been created.</string>
    <string name="successful_addtask">Task added successfully.</string>
    <string name="successful_archived">archived.</string>
    <string name="successful_unarchived">unarchived.</string>
    <string name="successful_deletion">deleted.</string>
    <string name="updated">updated.</string>
    <string name="unsuccessful_deletion">could not deleted.</string>
    <string name="successful_updation">Updated succefully.</string>
    <string name="username_update">Username updated.</string>
    <string name="role_update">Role updated to.</string>
    <string name="failed_update">Update failed.</string>
    <string name="snackbar_permission">Permission needed for gallery.</string>
    <string name="action_permission">Give Permission.</string>
    <string name="denied_permission">Permission denied. Cannot access gallery.</string>
</resources>