<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adminTaskListFragment"
        android:icon="@drawable/task_icon"
        android:title="@string/tasks"/>

    <item
        android:id="@+id/backgroundTaskFragment"
        android:icon="@drawable/baseline_task_alt_24"
        android:title="@string/task_log"/>

    <item
        android:id="@+id/inventoryListFragment"
        android:icon="@drawable/baseline_inventory_24"
        android:title="@string/inventory"/>

    <item
        android:id="@+id/archiveFragment"
        android:icon="@drawable/baseline_archive_24"
        android:title="@string/archive"/>

    <item
        android:id="@+id/inventoryLogFragment"
        android:icon="@drawable/baseline_list_alt_24"
        android:title="@string/inventory_log"/>
</menu>